# mclgeom

./: CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
include/MCL/: ArgParser.hpp  AssertHandler.hpp  Barycoords.hpp  BoundingSphere.hpp  Centerize.hpp  ComputeMasses.hpp  ComputeRoots.hpp  DisjointSets.hpp  EigenCereal.hpp  EigenMap.hpp  EigenMatrixIO.hpp  EnergyModel.hpp  FacesFromTets.hpp  GraphColor.hpp  LBFGS.hpp  Lame.hpp  Logger.hpp  MeshTXT.hpp  MicroTimer.hpp  MultiColorGaussSeidel.hpp  Normal.hpp  Phong.hpp  Projection.hpp  ReadEleNode.hpp  ReadMSH4.hpp  ReadSeamedObj.hpp  ReadVTK.hpp  SampleShape.hpp  Shader.hpp  ShapeFactory.hpp  SignedMeasure.hpp  SignedSVD.hpp  SignedVolume.hpp  SmoothMove.hpp  Sort.hpp  SparseReplicate.hpp  XForm.hpp  XuSpline.hpp
test/: CMakeLists.txt  armadillo_3k.ele  armadillo_3k.node  lbfgs.cpp  test_graphcolor.cpp  test_projection.cpp
tests/: lbfgs.cpp  test.cpp
